# pico-eye

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  license.md  readme.md
app/: CMakeLists.txt
app/pico/: CMakeLists.txt  main.cpp  ui_lcd.cpp  ui_lcd.h
app/pico/lcd/: CMakeLists.txt
app/pico/lcd/lib/Config/: CMakeLists.txt  DEV_Config.c
app/pico/lcd/lib/Fonts/: CMakeLists.txt
app/pico/lcd/lib/GUI/: CMakeLists.txt  GUI_Paint.c
app/pico/lcd/lib/LCD/: CMakeLists.txt  LCD_1in14.c
cmake/build-options/: linux.cmake  pico.cmake
cmake/modules/: project-build-summary.cmake
docker/: docker-compose.yml
docker/pico-gcc/: Dockerfile
include/: CMakeLists.txt
include/pico-eye/: tcs3471.h  veml7700.h
include/project-template/: delay_incrementer.h
scripts/: load-app.bash  run-build-docker.bash  run-build-linux.bash
src/: CMakeLists.txt  delay_incrementer.cpp  tcs3471.cpp  veml7700.cpp
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  delay_incrementer.cpp  tcs3471_tests.cpp  veml7700_tests.cpp
